update and finalize tuturial notebook from DI team

--- a/tutorials/compiler/housingprices/sample.ipynb
+++ b/tutorials/compiler/housingprices/sample.ipynb
@@ -75,10 +75,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-rmse:78130.9\n",
+      "[0]\tvalidation_0-rmse:84841.5\n",
       "Will train until validation_0-rmse hasn't improved in 5 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[46]\tvalidation_0-rmse:27040\n",
+      "[83]\tvalidation_0-rmse:32717.3\n",
       "\n"
      ]
     }
@@ -126,18 +126,18 @@
      "output_type": "stream",
      "text": [
       "          worse\n",
-      "0   87970.56250\n",
-      "1 -107742.65625\n",
-      "2 -134472.62500\n",
-      "3 -145948.43750\n",
-      "4 -210647.00000\n",
+      "0  132400.50000\n",
+      "1 -151484.84375\n",
+      "2 -165463.31250\n",
+      "3 -198485.50000\n",
+      "4 -260265.15625\n",
       "\n",
-      "        best\n",
-      "0  22.710938\n",
-      "1  44.125000\n",
-      "2 -58.718750\n",
-      "3 -60.546875\n",
-      "4 -93.468750\n"
+      "         best\n",
+      "0   20.539062\n",
+      "1   53.296875\n",
+      "2   79.406250\n",
+      "3 -107.562500\n",
+      "4 -113.671875\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
       "               'title': 'Model Interpreter '}],\n",
       " 'name': 'Report for Advanced Housing Price Regression',\n",
       " 'overview': True,\n",
-      " 'writers': [{'attr': {'name': 'housingpricing-regression-model-interpreter-report'},\n",
+      " 'writers': [{'attr': {'name': 'housingprices-regression-model-interpreter-report'},\n",
       "              'class': 'Pdf'}]}\n"
      ]
     }
@@ -390,7 +390,7 @@
       "                                                    'model_interpret_k_value': 5,\n",
       "                                                    'model_interpret_stats_type': 'top_k',\n",
       "                                                    'model_interpret_top_value': 15,\n",
-      "                                                    'predict_func': <bound method XGBModel.predict of XGBRegressor(base_score=179240.15525114155, booster='gbtree',\n",
+      "                                                    'predict_func': <bound method XGBModel.predict of XGBRegressor(base_score=178212.72511415524, booster='gbtree',\n",
       "             colsample_bylevel=0.8, colsample_bytree=0.8, gamma=0,\n",
       "             learning_rate=0.1, max_delta_step=0, max_depth=5,\n",
       "             min_child_weight=1, missing=None, n_estimators=1000, n_jobs=1,\n",
@@ -399,56 +399,56 @@
       "             subsample=0.7)>,\n",
       "                                                    'target_names': ['SalePrice'],\n",
       "                                                    'train_data':       MSSubClass  LotFrontage  LotArea  OverallQual  OverallCond  YearBuilt  \\\n",
-      "0           70.0     60.00000   9600.0          4.0          2.0     1900.0   \n",
-      "1           60.0     69.81278  17542.0          7.0          7.0     1974.0   \n",
-      "2          190.0     76.00000   7630.0          5.0          9.0     1900.0   \n",
-      "3           60.0     75.00000  11404.0          7.0          5.0     1998.0   \n",
-      "4           60.0     60.00000   8123.0          6.0          5.0     2000.0   \n",
+      "0           80.0         55.0  10780.0          5.0          5.0     1976.0   \n",
+      "1           70.0         75.0  13125.0          7.0          6.0     1940.0   \n",
+      "2           60.0         86.0  10380.0          7.0          5.0     1986.0   \n",
+      "3           30.0         60.0   7200.0          5.0          4.0     1910.0   \n",
+      "4           50.0         70.0   8737.0          6.0          7.0     1923.0   \n",
       "...          ...          ...      ...          ...          ...        ...   \n",
-      "1090        20.0     75.00000   9986.0          8.0          5.0     2006.0   \n",
-      "1091        20.0     60.00000   7024.0          5.0          5.0     2005.0   \n",
-      "1092        60.0    118.00000  35760.0         10.0          5.0     1995.0   \n",
-      "1093        20.0     84.00000   8658.0          6.0          5.0     1965.0   \n",
-      "1094        20.0    103.00000  13472.0         10.0          5.0     2003.0   \n",
+      "1090       160.0         36.0   2592.0          5.0          3.0     1976.0   \n",
+      "1091        80.0        102.0  10192.0          7.0          6.0     1968.0   \n",
+      "1092       120.0         55.0   7892.0          6.0          5.0     1993.0   \n",
+      "1093        70.0         60.0   9084.0          4.0          5.0     1940.0   \n",
+      "1094        90.0         60.0   7596.0          5.0          5.0     1952.0   \n",
       "\n",
       "      YearRemodAdd  MasVnrArea  BsmtFinSF1  BsmtFinSF2  ...  GarageArea  \\\n",
-      "0           1950.0         0.0         0.0         0.0  ...       779.0   \n",
-      "1           2003.0         0.0       125.0      1031.0  ...       518.0   \n",
-      "2           1996.0         0.0         0.0         0.0  ...       672.0   \n",
-      "3           1999.0       202.0       252.0         0.0  ...       541.0   \n",
-      "4           2000.0        16.0         0.0         0.0  ...       463.0   \n",
+      "0           1976.0         0.0       483.0         0.0  ...       576.0   \n",
+      "1           1984.0         0.0       410.0         0.0  ...       240.0   \n",
+      "2           1987.0       172.0        28.0      1474.0  ...       576.0   \n",
+      "3           2006.0         0.0       247.0       465.0  ...       280.0   \n",
+      "4           1950.0         0.0       300.0         0.0  ...       440.0   \n",
       "...            ...         ...         ...         ...  ...         ...   \n",
-      "1090        2007.0       428.0         0.0         0.0  ...       895.0   \n",
-      "1091        2006.0         0.0       980.0         0.0  ...       450.0   \n",
-      "1092        1996.0      1378.0      1387.0         0.0  ...       807.0   \n",
-      "1093        1965.0       101.0       643.0         0.0  ...       440.0   \n",
-      "1094        2003.0       922.0        56.0         0.0  ...       968.0   \n",
+      "1090        1976.0         0.0       129.0       232.0  ...       336.0   \n",
+      "1091        1992.0       143.0         0.0         0.0  ...       487.0   \n",
+      "1092        1993.0         0.0       300.0         0.0  ...       530.0   \n",
+      "1093        1950.0         0.0         0.0         0.0  ...       296.0   \n",
+      "1094        1952.0       360.0         0.0         0.0  ...       400.0   \n",
       "\n",
       "      WoodDeckSF  OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  \\\n",
-      "0            0.0          0.0           90.0        0.0          0.0   \n",
-      "1          220.0         47.0            0.0        0.0          0.0   \n",
-      "2          344.0          0.0           40.0        0.0          0.0   \n",
-      "3          192.0         84.0            0.0        0.0          0.0   \n",
-      "4          100.0         63.0            0.0        0.0          0.0   \n",
+      "0            0.0          0.0            0.0        0.0          0.0   \n",
+      "1            0.0          0.0            0.0        0.0          0.0   \n",
+      "2          201.0         96.0            0.0        0.0          0.0   \n",
+      "3            0.0         30.0          226.0        0.0          0.0   \n",
+      "4            0.0         38.0            0.0      144.0          0.0   \n",
       "...          ...          ...            ...        ...          ...   \n",
-      "1090         0.0         49.0            0.0        0.0          0.0   \n",
-      "1091         0.0         49.0            0.0        0.0          0.0   \n",
-      "1092       361.0         76.0            0.0        0.0          0.0   \n",
-      "1093         0.0        138.0            0.0        0.0          0.0   \n",
-      "1094       248.0        105.0            0.0        0.0          0.0   \n",
+      "1090       182.0          0.0            0.0        0.0          0.0   \n",
+      "1091         0.0         98.0            0.0        0.0          0.0   \n",
+      "1092         0.0         63.0            0.0        0.0          0.0   \n",
+      "1093       120.0          0.0            0.0        0.0          0.0   \n",
+      "1094         0.0          0.0            0.0        0.0          0.0   \n",
       "\n",
       "      PoolArea  MiscVal  MoSold  YrSold  \n",
-      "0          0.0      0.0     5.0  2006.0  \n",
+      "0          0.0      0.0     7.0  2006.0  \n",
       "1          0.0      0.0     7.0  2007.0  \n",
-      "2          0.0      0.0     5.0  2010.0  \n",
-      "3          0.0      0.0     7.0  2008.0  \n",
-      "4          0.0      0.0     6.0  2009.0  \n",
+      "2          0.0      0.0     8.0  2007.0  \n",
+      "3          0.0      0.0     6.0  2009.0  \n",
+      "4          0.0      0.0     5.0  2007.0  \n",
       "...        ...      ...     ...     ...  \n",
-      "1090       0.0      0.0     2.0  2007.0  \n",
-      "1091       0.0      0.0     6.0  2007.0  \n",
-      "1092       0.0      0.0     7.0  2006.0  \n",
-      "1093       0.0      0.0    12.0  2006.0  \n",
-      "1094       0.0      0.0     6.0  2009.0  \n",
+      "1090       0.0      0.0     4.0  2010.0  \n",
+      "1091       0.0      0.0     9.0  2006.0  \n",
+      "1092       0.0      0.0     3.0  2008.0  \n",
+      "1093       0.0      0.0    10.0  2009.0  \n",
+      "1094       0.0      0.0     7.0  2009.0  \n",
       "\n",
       "[1095 rows x 36 columns],\n",
       "                                                    'valid_x': 'var:X_test',\n",
@@ -493,63 +493,69 @@
       "                                                                      'PoolArea',\n",
       "                                                                      'MiscVal',\n",
       "                                                                      'MoSold',\n",
-      "                                                                      'YrSold'],\n",
+      "                                                                      'YrSold'],\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                                                    'method': 'shap',\n",
       "                                                    'mode': 'regression',\n",
       "                                                    'train_data':       MSSubClass  LotFrontage  LotArea  OverallQual  OverallCond  YearBuilt  \\\n",
-      "0           70.0     60.00000   9600.0          4.0          2.0     1900.0   \n",
-      "1           60.0     69.81278  17542.0          7.0          7.0     1974.0   \n",
-      "2          190.0     76.00000   7630.0          5.0          9.0     1900.0   \n",
-      "3           60.0     75.00000  11404.0          7.0          5.0     1998.0   \n",
-      "4           60.0     60.00000   8123.0          6.0          5.0     2000.0   \n",
+      "0           80.0         55.0  10780.0          5.0          5.0     1976.0   \n",
+      "1           70.0         75.0  13125.0          7.0          6.0     1940.0   \n",
+      "2           60.0         86.0  10380.0          7.0          5.0     1986.0   \n",
+      "3           30.0         60.0   7200.0          5.0          4.0     1910.0   \n",
+      "4           50.0         70.0   8737.0          6.0          7.0     1923.0   \n",
       "...          ...          ...      ...          ...          ...        ...   \n",
-      "1090        20.0     75.00000   9986.0          8.0          5.0     2006.0   \n",
-      "1091        20.0     60.00000   7024.0          5.0          5.0     2005.0   \n",
-      "1092        60.0    118.00000  35760.0         10.0          5.0     1995.0   \n",
-      "1093        20.0     84.00000   8658.0          6.0          5.0     1965.0   \n",
-      "1094        20.0    103.00000  13472.0         10.0          5.0     2003.0   \n",
+      "1090       160.0         36.0   2592.0          5.0          3.0     1976.0   \n",
+      "1091        80.0        102.0  10192.0          7.0          6.0     1968.0   \n",
+      "1092       120.0         55.0   7892.0          6.0          5.0     1993.0   \n",
+      "1093        70.0         60.0   9084.0          4.0          5.0     1940.0   \n",
+      "1094        90.0         60.0   7596.0          5.0          5.0     1952.0   \n",
       "\n",
       "      YearRemodAdd  MasVnrArea  BsmtFinSF1  BsmtFinSF2  ...  GarageArea  \\\n",
-      "0           1950.0         0.0         0.0         0.0  ...       779.0   \n",
-      "1           2003.0         0.0       125.0      1031.0  ...       518.0   \n",
-      "2           1996.0         0.0         0.0         0.0  ...       672.0   \n",
-      "3           1999.0       202.0       252.0         0.0  ...       541.0   \n",
-      "4           2000.0        16.0         0.0         0.0  ...       463.0   \n",
+      "0           1976.0         0.0       483.0         0.0  ...       576.0   \n",
+      "1           1984.0         0.0       410.0         0.0  ...       240.0   \n",
+      "2           1987.0       172.0        28.0      1474.0  ...       576.0   \n",
+      "3           2006.0         0.0       247.0       465.0  ...       280.0   \n",
+      "4           1950.0         0.0       300.0         0.0  ...       440.0   \n",
       "...            ...         ...         ...         ...  ...         ...   \n",
-      "1090        2007.0       428.0         0.0         0.0  ...       895.0   \n",
-      "1091        2006.0         0.0       980.0         0.0  ...       450.0   \n",
-      "1092        1996.0      1378.0      1387.0         0.0  ...       807.0   \n",
-      "1093        1965.0       101.0       643.0         0.0  ...       440.0   \n",
-      "1094        2003.0       922.0        56.0         0.0  ...       968.0   \n",
+      "1090        1976.0         0.0       129.0       232.0  ...       336.0   \n",
+      "1091        1992.0       143.0         0.0         0.0  ...       487.0   \n",
+      "1092        1993.0         0.0       300.0         0.0  ...       530.0   \n",
+      "1093        1950.0         0.0         0.0         0.0  ...       296.0   \n",
+      "1094        1952.0       360.0         0.0         0.0  ...       400.0   \n",
       "\n",
       "      WoodDeckSF  OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  \\\n",
-      "0            0.0          0.0           90.0        0.0          0.0   \n",
-      "1          220.0         47.0            0.0        0.0          0.0   \n",
-      "2          344.0          0.0           40.0        0.0          0.0   \n",
-      "3          192.0         84.0            0.0        0.0          0.0   \n",
-      "4          100.0         63.0            0.0        0.0          0.0   \n",
+      "0            0.0          0.0            0.0        0.0          0.0   \n",
+      "1            0.0          0.0            0.0        0.0          0.0   \n",
+      "2          201.0         96.0            0.0        0.0          0.0   \n",
+      "3            0.0         30.0          226.0        0.0          0.0   \n",
+      "4            0.0         38.0            0.0      144.0          0.0   \n",
       "...          ...          ...            ...        ...          ...   \n",
-      "1090         0.0         49.0            0.0        0.0          0.0   \n",
-      "1091         0.0         49.0            0.0        0.0          0.0   \n",
-      "1092       361.0         76.0            0.0        0.0          0.0   \n",
-      "1093         0.0        138.0            0.0        0.0          0.0   \n",
-      "1094       248.0        105.0            0.0        0.0          0.0   \n",
+      "1090       182.0          0.0            0.0        0.0          0.0   \n",
+      "1091         0.0         98.0            0.0        0.0          0.0   \n",
+      "1092         0.0         63.0            0.0        0.0          0.0   \n",
+      "1093       120.0          0.0            0.0        0.0          0.0   \n",
+      "1094         0.0          0.0            0.0        0.0          0.0   \n",
       "\n",
       "      PoolArea  MiscVal  MoSold  YrSold  \n",
-      "0          0.0      0.0     5.0  2006.0  \n",
+      "0          0.0      0.0     7.0  2006.0  \n",
       "1          0.0      0.0     7.0  2007.0  \n",
-      "2          0.0      0.0     5.0  2010.0  \n",
-      "3          0.0      0.0     7.0  2008.0  \n",
-      "4          0.0      0.0     6.0  2009.0  \n",
+      "2          0.0      0.0     8.0  2007.0  \n",
+      "3          0.0      0.0     6.0  2009.0  \n",
+      "4          0.0      0.0     5.0  2007.0  \n",
       "...        ...      ...     ...     ...  \n",
-      "1090       0.0      0.0     2.0  2007.0  \n",
-      "1091       0.0      0.0     6.0  2007.0  \n",
-      "1092       0.0      0.0     7.0  2006.0  \n",
-      "1093       0.0      0.0    12.0  2006.0  \n",
-      "1094       0.0      0.0     6.0  2009.0  \n",
+      "1090       0.0      0.0     4.0  2010.0  \n",
+      "1091       0.0      0.0     9.0  2006.0  \n",
+      "1092       0.0      0.0     3.0  2008.0  \n",
+      "1093       0.0      0.0    10.0  2009.0  \n",
+      "1094       0.0      0.0     7.0  2009.0  \n",
       "\n",
       "[1095 rows x 36 columns],\n",
-      "                                                    'trained_model': XGBRegressor(base_score=179240.15525114155, booster='gbtree',\n",
+      "                                                    'trained_model': XGBRegressor(base_score=178212.72511415524, booster='gbtree',\n",
       "             colsample_bylevel=0.8, colsample_bytree=0.8, gamma=0,\n",
       "             learning_rate=0.1, max_delta_step=0, max_depth=5,\n",
       "             min_child_weight=1, missing=None, n_estimators=1000, n_jobs=1,\n",
@@ -563,7 +569,7 @@
       "               'title': 'Model Interpreter '}],\n",
       " 'name': 'Report for Advanced Housing Price Regression',\n",
       " 'overview': True,\n",
-      " 'writers': [{'attr': {'name': 'housingpricing-regression-model-interpreter-report'},\n",
+      " 'writers': [{'attr': {'name': 'housingprices-regression-model-interpreter-report'},\n",
       "              'class': 'Pdf'}]}\n"
      ]
     }
@@ -598,10 +604,6 @@
       "Interpret 500/1095 samples\n",
       "Interpret 600/1095 samples\n",
       "Interpret 700/1095 samples\n",
-      "Ill-conditioned matrix (rcond=3.95263e-17): result may not be accurate.\n",
-      "Ill-conditioned matrix (rcond=1.469e-17): result may not be accurate.\n",
-      "Ill-conditioned matrix (rcond=1.45731e-18): result may not be accurate.\n",
-      "Ill-conditioned matrix (rcond=1.23265e-18): result may not be accurate.\n",
       "Interpret 800/1095 samples\n",
       "Interpret 900/1095 samples\n",
       "Interpret 1000/1095 samples\n",
@@ -631,13 +633,13 @@
      "output_type": "stream",
      "text": [
       "('report generated : '\n",
-      " '/Users/i062308/Development/Explainable_AI/tutorials/compiler/housingpricing/housingpricing-regression-model-interpreter-report.pdf')\n"
+      " '/Users/i062308/Development/Explainable_AI/tutorials/compiler/housingprices/housingpricing-regression-model-interpreter-report.pdf')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'report generated : /Users/i062308/Development/Explainable_AI/tutorials/compiler/housingpricing/housingpricing-regression-model-interpreter-report.pdf'"
+       "'report generated : /Users/i062308/Development/Explainable_AI/tutorials/compiler/housingprices/housingpricing-regression-model-interpreter-report.pdf'"
       ]
      },
      "execution_count": 12,
